--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -33,8 +33,10 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/earn_button"
         android:layout_below="@id/appbar"
-        android:layout_above="@+id/earn_button">
+        android:layout_alignParentStart="true">
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -93,10 +95,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="24dp"
                         android:background="@drawable/round_sand_card"
+                        android:paddingBottom="16dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:paddingBottom="16dp">
+                        app:layout_constraintTop_toTopOf="parent">
 
                         <TextView
                             android:id="@+id/textView5"
@@ -124,37 +126,37 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-                        <TextView
-                            android:id="@+id/brochure_link"
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/chip_brochure"
+                            style="@style/Widget.MaterialComponents.Chip.Action"
                             android:layout_width="wrap_content"
-                            android:layout_height="0dp"
-                            android:layout_marginTop="24dp"
-                            android:drawableStart="@drawable/ic_book"
-                            android:fontFamily="@font/brandontext_medium"
-                            android:text="Read full brochure"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
+                            android:layout_height="40dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="32dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginBottom="16dp"
+                            android:checkable="false"
+                            android:clickable="true"
+                            android:focusable="true"
                             android:gravity="center"
-                            app:layout_constraintEnd_toStartOf="@+id/download_link"
-                            app:layout_constraintHorizontal_bias="0.5"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/brochure_subheading" />
-
-                        <TextView
-                            android:id="@+id/download_link"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:drawableStart="@drawable/ic_file_download"
-                            android:fontFamily="@font/brandontext_medium"
-                            android:text="Download"
-                            android:gravity="center"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"
+                            android:text="Open Brochure"
+                            android:textAppearance="@style/WhatsappChipAppearance2"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
-                            app:layout_constraintBottom_toBottomOf="@+id/brochure_link"
+                            app:chipBackgroundColor="#fff"
+                            app:chipCornerRadius="20dp"
+                            app:chipIcon="@drawable/ic_book"
+                            app:chipIconSize="25dp"
+                            app:chipStartPadding="10dp"
+                            app:chipStrokeColor="@color/colorPrimary"
+                            app:chipStrokeWidth="1dp"
+                            app:iconStartPadding="20dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.5"
-                            app:layout_constraintStart_toEndOf="@+id/brochure_link"
-                            app:layout_constraintTop_toTopOf="@+id/brochure_link" />
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/brochure_subheading"
+                            app:textEndPadding="25dp" />
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -165,127 +167,139 @@
                         android:layout_height="131dp"
                         android:layout_marginEnd="24dp"
                         android:backgroundTint="#783d85"
+                        android:foregroundGravity="center"
                         app:cardCornerRadius="12dp"
+                        app:cardElevation="4dp"
                         app:layout_constraintCircleRadius="12dp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:cardElevation="4dp"
-                        android:foregroundGravity="center">
+                        app:layout_constraintTop_toTopOf="parent">
 
                         <TextView
                             android:id="@+id/product_name"
-                            android:layout_gravity="center"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/brandontext_medium"
                             android:text="BYJU's"
                             android:textAlignment="center"
                             android:textColor="@color/white"
-                            android:textSize="24sp"
-                            android:fontFamily="@font/brandontext_medium"/>
+                            android:textSize="24sp" />
 
 
                     </androidx.cardview.widget.CardView>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <View
+                    android:id="@+id/sep1"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:id="@+id/sep1"
-                    android:layout_marginHorizontal="24dp"
-                    android:background="#E6E6E6"
                     android:layout_below="@id/cl2"
-                    android:layout_marginTop="24dp"/>
+                    android:layout_marginHorizontal="24dp"
+                    android:layout_marginTop="24dp"
+                    android:background="#E6E6E6" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/cl3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/sep1"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginHorizontal="8dp"
-                    android:orientation="horizontal">
+                    android:layout_marginHorizontal="24dp"
+                    android:layout_marginTop="24dp">
 
-                    <TextView
-                        android:id="@+id/textView11"
-                        android:layout_width="wrap_content"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/constraintLayout3"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:fontFamily="@font/brandontext_medium"
-                        android:text="Recco’s offer to your \nclient!"
-                        android:textColor="@color/heading_dark"
-                        android:textSize="22sp"
+                        android:layout_marginTop="24dp"
+                        android:background="@drawable/round_sand_card"
+                        android:paddingBottom="16dp"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent">
 
-                    <TextView
-                        android:id="@+id/textView12"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="8dp"
-                        android:fontFamily="@font/brandontext_medium"
-                        android:text="Here’s a list of offerings"
-                        android:textColor="@color/heading_lighter"
-                        android:textSize="18sp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+                        <TextView
+                            android:id="@+id/textView9"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="16dp"
+                            android:fontFamily="@font/brandontext_medium"
+                            android:text="Share and earn!"
+                            android:textColor="@color/heading_dark"
+                            android:textSize="18sp"
+                            app:layout_constraintStart_toStartOf="@+id/textView8"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/textView8"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="6dp"
+                            android:layout_marginEnd="16dp"
+                            android:fontFamily="@font/brandontext_regular"
+                            android:text="Get to know more \nabout all the products \nfrom BYJU’s"
+                            android:textColor="@color/heading_lighter"
+                            android:textSize="16sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/chip_whatsapp"
+                            style="@style/Widget.MaterialComponents.Chip.Action"
+                            android:layout_width="wrap_content"
+                            android:layout_height="40dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="32dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginBottom="16dp"
+                            android:checkable="false"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:gravity="center"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"
+                            android:text="Share with client"
+                            android:textAppearance="@style/WhatsappChipAppearance2"
+                            android:textColor="@color/colorPrimary"
+                            app:chipBackgroundColor="#fff"
+                            app:chipCornerRadius="20dp"
+                            app:chipIcon="@drawable/ic_wa_logo"
+                            app:chipIconSize="25dp"
+                            app:chipStartPadding="10dp"
+                            app:chipStrokeColor="@color/colorPrimary"
+                            app:chipStrokeWidth="1dp"
+                            app:iconStartPadding="20dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.504"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/textView8"
+                            app:textEndPadding="25dp" />
+
+
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <androidx.cardview.widget.CardView
-                        android:id="@+id/cardView4"
-                        android:layout_width="120dp"
-                        android:layout_height="140dp"
-                        android:layout_marginEnd="16dp"
+                        android:layout_width="112dp"
+                        android:layout_height="131dp"
+                        android:layout_marginStart="24dp"
+                        android:foreground="@drawable/ic_zoom_in"
+                        android:foregroundGravity="center"
                         app:cardCornerRadius="12dp"
                         app:cardElevation="4dp"
                         app:layout_constraintCircleRadius="12dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:foregroundGravity="center">
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
 
                         <ImageView
+                            android:id="@+id/brochure_thumbnail"
+                            android:layout_gravity="fill"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:background="@drawable/blue_background_gradient"
-                            android:scaleType="fitXY"/>
-
-                        <TextView
-                            android:layout_gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Recko"
-                            android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:textSize="24sp"
-                            android:fontFamily="@font/brandontext_medium"/>
+                            android:scaleType="centerCrop" />
 
 
                     </androidx.cardview.widget.CardView>
-
-                    <com.google.android.material.chip.Chip
-                        android:id="@+id/chip_whatsapp"
-                        style="@style/Widget.MaterialComponents.Chip.Action"
-                        android:layout_width="150dp"
-                        android:layout_height="40dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:checkable="false"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:gravity="center"
-                        android:paddingLeft="-5dp"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
-                        android:text="Share Details"
-                        android:textAppearance="@style/WhatsappChipAppearance2"
-                        android:textColor="@color/white"
-                        app:chipBackgroundColor="#25D366"
-                        app:chipCornerRadius="20dp"
-                        app:chipIcon="@drawable/ic_whatsapp"
-                        app:chipIconSize="25dp"
-                        app:chipStartPadding="10dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView12" />
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -293,8 +307,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/cl3"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginHorizontal="8dp">
+                    android:layout_marginHorizontal="8dp"
+                    android:layout_marginTop="24dp">
 
                     <TextView
                         android:id="@+id/textView6"
@@ -367,11 +381,11 @@
                         android:drawableStart="@drawable/rupee"
                         android:drawablePadding="5dp"
                         android:drawableTint="@color/heading_lighter"
+                        android:focusedByDefault="false"
                         android:fontFamily="@font/brandontext_regular"
                         android:hint="Enter price pitched to the user"
                         android:inputType="number"
                         android:longClickable="false"
-                        android:focusedByDefault="false"
                         android:maxLines="1"
                         android:singleLine="true"
                         android:textColor="@color/heading_dark"
@@ -383,8 +397,8 @@
                     android:id="@+id/cl5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_below="@+id/offer_discount_box">
+                    android:layout_below="@+id/offer_discount_box"
+                    android:layout_marginTop="8dp">
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_discount1"
