--- a/app/src/main/res/layout/learn_video_card.xml
+++ b/app/src/main/res/layout/learn_video_card.xml
@@ -40,12 +40,48 @@
 
                     <ImageView
                         android:id="@+id/imgcategory"
-                        android:layout_width="170dp"
+                        android:layout_width="@dimen/_120sdp"
                         android:layout_height="0dp"
-                        android:src="@drawable/sample2"
-                        app:layout_constraintDimensionRatio="h,16:8"
+                        android:src="@drawable/video_icon_work"
+                        app:layout_constraintDimensionRatio="h,144:72"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <View
+                        android:id="@+id/translucent"
+                        android:layout_width="@dimen/_98sdp"
+                        android:layout_height="0dp"
+                        android:background="@drawable/round_pink_card"
+                        app:layout_constraintDimensionRatio="h,117:72"
+                        app:layout_constraintEnd_toEndOf="@+id/imgcategory"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="@dimen/_85sdp"
+                        android:layout_marginBottom="8dp"
+                        android:background="@drawable/play_icon"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/video_thumbnail_text_top"
+                        android:layout_width="@dimen/_80sdp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_35sdp"
+                        android:layout_marginTop="@dimen/_15sdp"
+                        android:fontFamily="@font/brandontext_medium"
+                        android:inputType="textMultiLine"
+                        android:textColor="@color/background"
+                        android:textSize="@dimen/_10ssp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -68,6 +104,17 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/cardView2"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/flavour_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/brandontext_regular"
+                android:text="TextView"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="@+id/titlecategory"
+                app:layout_constraintTop_toBottomOf="@+id/titlecategory" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
