--- a/app/src/main/res/layout/product_large_card.xml
+++ b/app/src/main/res/layout/product_large_card.xml
@@ -61,10 +61,14 @@
                                 android:id="@+id/imgcategory"
                                 android:layout_width="150dp"
                                 android:layout_height="0dp"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginBottom="8dp"
                                 android:src="@drawable/sample2"
+                                app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintDimensionRatio="h,16:8"
                                 app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintStart_toStartOf="parent" />
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -78,8 +82,8 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
                         android:fontFamily="@font/brandontext_medium"
-                        android:maxLines="1"
-                        android:singleLine="true"
+                        android:maxLines="2"
+                        android:singleLine="false"
                         android:text="@string/car_loannndddddddddddd"
                         android:textColor="@color/heading_dark"
                         android:textSize="20sp"
@@ -87,7 +91,8 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toEndOf="@+id/cardView2"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_chainStyle="spread_inside" />
 
                     <TextView
                         android:id="@+id/earnupto"
@@ -98,6 +103,7 @@
                         android:text="@string/_10_products_sold"
                         android:textColor="#8b8b8b"
                         android:textSize="16sp"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toTopOf="@+id/upto"
                         app:layout_constraintStart_toStartOf="@+id/titlecategory"
                         app:layout_constraintTop_toBottomOf="@+id/titlecategory" />
